--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "sass-loader": "^13.3.3",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
